# steamware

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  STEAMWare.py  pyproject.toml  setup.py  steamware.py  tox.ini
.github/workflows/: python-app.yaml
homemryanDocumentsSteamware/cross/: cross.scad  steamware.scad
homemryanDocumentsSteamware/dougnut/: dougnut.scad
homemryanDocumentsSteamware/example_part/: example_part.scad
homemryanDocumentssteamware/dougnut/: dougnut.scad
steamware/: steamware.py  steamware.scad
tests/: test_steamware.py
